--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,22 +101,22 @@ jobs:
     parameters:
       name: Android_Ubuntu_JSC
       vmImage: 'ubuntu-latest'
-      JSEngine: jsc
+      JSEngine: JavaScriptCore
 
   - template: .github/jobs/android.yml
     parameters:
       name: Android_Ubuntu_V8
       vmImage: 'ubuntu-latest'
-      JSEngine: v8android
+      JSEngine: V8
 
   - template: .github/jobs/android.yml
     parameters:
       name: Android_MacOS_JSC
       vmImage: 'macOS-latest'
-      JSEngine: jsc
+      JSEngine: JavaScriptCore
 
   - template: .github/jobs/android.yml
     parameters:
       name: Android_MacOS_V8
       vmImage: 'macOS-latest'
-      JSEngine: v8android
+      JSEngine: V8
