--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ FetchContent_Declare(ios-cmake
 FetchContent_Declare(jsruntimehost
     GIT_REPOSITORY https://github.com/BabylonJS/JsRuntimeHost.git
     GIT_TAG d1667b827c5b80c07c959780e582ea0d9a11c0ad)
+FetchContent_Declare(android-extensions
+    GIT_REPOSITORY https://github.com/BabylonJS/AndroidExtensions.git
+    GIT_TAG 883c4a286116e51ee989e39ee8e216d632997329)
 set(JSRUNTIMEHOST_TESTS OFF)
 
 set(CONTENT_TO_FETCH cmake-extensions jsruntimehost)
@@ -62,6 +65,7 @@ endif()
 # Setting Platform
 if(ANDROID)
     set(BABYLON_NATIVE_PLATFORM "Android")
+    set(CONTENT_TO_FETCH ${CONTENT_TO_FETCH} android-extensions)
 elseif(IOS)
     set(BABYLON_NATIVE_PLATFORM "iOS")
 elseif(APPLE)
