--- a/.github/jobs/android.yml
+++ b/.github/jobs/android.yml
@@ -24,33 +24,33 @@ jobs:
         npm install
       displayName: 'Install JS engine NPMs'
       
-#    - task: Gradle@2
-#      inputs:
-#          workingDirectory: 'Apps/Playground/Android'
-#          gradleWrapperFile: 'Apps/Playground/Android/gradlew'
-#          gradleOptions: '-Xmx1536m'
-#          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
-#          publishJUnitResults: false
-#          tasks: 'assembleRelease'
-#      displayName: 'Build Playground ${{ parameters.JSEngine }}'
+    - task: Gradle@2
+      inputs:
+          workingDirectory: 'Apps/Playground/Android'
+          gradleWrapperFile: 'Apps/Playground/Android/gradlew'
+          gradleOptions: '-Xmx1536m'
+          options: '-PJSEngine=${{ parameters.JSEngine }} -PARM64Only -PNDK_VERSION=$(NDK_VERSION) -PUNITY_BUILD=${UNITY_BUILD}'
+          publishJUnitResults: false
+          tasks: 'assembleRelease'
+      displayName: 'Build Playground ${{ parameters.JSEngine }}'
 
-#    - script: |
-#        echo Install Android image
-#        echo 'y' | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-27;default;x86_64'
-#        echo 'y' | $ANDROID_HOME/tools/bin/sdkmanager --licenses
-#        echo Create AVD
-#        $ANDROID_HOME/tools/bin/avdmanager create avd -n Pixel_API_27 -d pixel -k 'system-images;android-27;default;x86_64'
-#      displayName: 'Install Android Emulator'
-#      condition: contains('${{ parameters.vmImage }}', 'macOS')
-#
-#    - script: |
-#        echo Start emulator
-#        nohup $ANDROID_HOME/emulator/emulator -avd Pixel_API_27 -gpu host -no-window 2>&1 &
-#        echo Wait for emulator
-#        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do echo '.'; sleep 1; done'
-#        $ANDROID_HOME/platform-tools/adb devices
-#      displayName: 'Start Android Emulator'
-#      condition: contains('${{ parameters.vmImage }}', 'macOS')
+    - script: |
+        echo Install Android image
+        echo 'y' | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-27;default;x86_64'
+        echo 'y' | $ANDROID_HOME/tools/bin/sdkmanager --licenses
+        echo Create AVD
+        $ANDROID_HOME/tools/bin/avdmanager create avd -n Pixel_API_27 -d pixel -k 'system-images;android-27;default;x86_64'
+      displayName: 'Install Android Emulator'
+      condition: contains('${{ parameters.vmImage }}', 'macOS')
+
+    - script: |
+        echo Start emulator
+        nohup $ANDROID_HOME/emulator/emulator -avd Pixel_API_27 -gpu host -no-window 2>&1 &
+        echo Wait for emulator
+        $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed) ]]; do echo '.'; sleep 1; done'
+        $ANDROID_HOME/platform-tools/adb devices
+      displayName: 'Start Android Emulator'
+      condition: contains('${{ parameters.vmImage }}', 'macOS')
 
     - task: Gradle@3
       inputs:
@@ -62,17 +62,17 @@ jobs:
       displayName: 'Run Connected Android Test'
       condition: contains('${{ parameters.vmImage }}', 'macOS')
 
-#    - script: |
-#        export results=$(find ./app/build/outputs/androidTest-results -name "*.txt")
-#        echo cat "$results"
-#        cat "$results"
-#      workingDirectory: 'Apps/UnitTests/Android'
-#      condition: succeededOrFailed() && contains('${{ parameters.vmImage }}', 'macOS')
-#      displayName: 'Dump logcat from Test Results'
-#
-#    - task: PublishBuildArtifacts@1
-#      inputs:
-#        pathToPublish: 'Apps/UnitTests/Android/app/build/outputs/androidTest-results/connected'
-#        artifactName: 'AndroidTestResults_${{parameters.jsEngine}}'
-#      condition: succeededOrFailed() && contains('${{ parameters.vmImage }}', 'macOS')
-#      displayName: 'Publish Test Results'
+    - script: |
+        export results=$(find ./app/build/outputs/androidTest-results -name "*.txt")
+        echo cat "$results"
+        cat "$results"
+      workingDirectory: 'Apps/UnitTests/Android'
+      condition: succeededOrFailed() && contains('${{ parameters.vmImage }}', 'macOS')
+      displayName: 'Dump logcat from Test Results'
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        pathToPublish: 'Apps/UnitTests/Android/app/build/outputs/androidTest-results/connected'
+        artifactName: 'AndroidTestResults_${{parameters.jsEngine}}'
+      condition: succeededOrFailed() && contains('${{ parameters.vmImage }}', 'macOS')
+      displayName: 'Publish Test Results'
