--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,25 +35,25 @@ jobs:
 #      deploymentTarget: 16.2
 
 # WIN32
-#  - template: .github/jobs/win32.yml
-#    parameters:
-#      name: Win32_x64_D3D11
-#      vmImage: 'windows-latest'
-#      platform: x64
-#
-#  - template: .github/jobs/win32.yml
-#    parameters:
-#      name: Win32_x64_JSI_D3D11
-#      vmImage: 'windows-latest'
-#      platform: x64
-#      napiType: jsi
-#
-#  - template: .github/jobs/win32.yml
-#    parameters:
-#      name: Win32_x64_D3D12
-#      vmImage: 'windows-latest'
-#      platform: x64
-#      graphics_api: D3D12
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_JSI_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+      napiType: jsi
+
+  - template: .github/jobs/win32.yml
+    parameters:
+      name: Win32_x64_D3D12
+      vmImage: 'windows-latest'
+      platform: x64
+      graphics_api: D3D12
 
 # UWP
 #  - template: .github/jobs/uwp.yml
