--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -7,4 +7,4 @@ if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID
 endif()
 
 # NPM install
-npm(install ${CMAKE_CURRENT_SOURCE_DIR} "Apps module")
+npm(install ${CMAKE_CURRENT_SOURCE_DIR} "Apps")
