--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,13 @@ jobs:
 
   - template: .github/jobs/win32.yml
     parameters:
+      name: Win32_x64_V8_D3D11
+      vmImage: 'windows-latest'
+      platform: x64
+      napiType: V8
+
+  - template: .github/jobs/win32.yml
+    parameters:
       name: Win32_x64_D3D12
       vmImage: 'windows-latest'
       platform: x64
