--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -11,6 +11,7 @@ parameters:
   values:
   - direct
   - jsi
+  - V8
 - name: graphics_api
   type: string
   default: D3D11
@@ -24,6 +25,9 @@ jobs:
       ${{ if eq(parameters.napiType, 'jsi') }}:
         napiSuffix: '_JSI'
         jsEngineDefine: '-DNAPI_JAVASCRIPT_ENGINE=JSI'
+      ${{ if eq(parameters.napiType, 'V8') }}:
+        napiSuffix: '_V8'
+        jsEngineDefine: '-DNAPI_JAVASCRIPT_ENGINE=V8'
       ${{ if ne(parameters.napiType, 'jsi') }}:
         napiSuffix: ''
         jsEngineDefine: ''
