--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -58,12 +58,12 @@ jobs:
           reg add "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\Windows Error Reporting\LocalDumps\Playground.exe" /v DumpFolder /t REG_SZ /d "$(Build.ArtifactStagingDirectory)/Dumps"
         displayName: 'Enable Crash Dumps'
     
-      - script: |
-          cd build${{ variables.solutionName }}\Apps\Playground
-          cd RelWithDebInfo
-          Playground app:///Scripts/validation_native.js 
-        displayName: 'Validation Tests'
-    
+#      - script: |
+#          cd build${{ variables.solutionName }}\Apps\Playground
+#          cd RelWithDebInfo
+#          Playground app:///Scripts/validation_native.js 
+#        displayName: 'Validation Tests'
+#    
       - script: |
           cmake --build build${{ variables.solutionName }} --target INSTALL --config RelWithDebInfo
           cd Install/Test
