--- a/Apps/UnitTests/CMakeLists.txt
+++ b/Apps/UnitTests/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 add_executable(UnitTests ${LOCAL_SCRIPTS} ${NPM_SCRIPTS} ${TEST_APP} ${HEADERS})
 set_property(TARGET UnitTests PROPERTY UNITY_BUILD false)
 
-target_link_to_dependencies(UnitTests
+target_link_libraries(UnitTests
     PRIVATE AppRuntime
     PRIVATE Canvas
     PRIVATE Console
