--- a/Plugins/ExternalTexture/CMakeLists.txt
+++ b/Plugins/ExternalTexture/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 target_include_directories(ExternalTexture
     PUBLIC "Include")
 
-target_link_to_dependencies(ExternalTexture
+target_link_libraries(ExternalTexture
     PUBLIC napi
     PUBLIC GraphicsDevice
     PRIVATE napi_extensions
