Update npm in cmake to use package.json.lock

--- a/Apps/CMakeLists.txt
+++ b/Apps/CMakeLists.txt
@@ -6,5 +6,4 @@ if((WIN32 AND NOT WINDOWS_STORE) OR (APPLE AND NOT IOS) OR (UNIX AND NOT ANDROID
     add_subdirectory(UnitTests)
 endif()
 
-# NPM install
-npm(install)
+npm(install ${CMAKE_CURRENT_SOURCE_DIR} "Apps" "--silent")
